# exciteBot

./: .gitignore  README.md  meson.build
docs/: 2d_engine_spec.md  REPRODUCE_REFERENCE.md  excitebike_physics_model_handoff.md  memory_disassembly-findings.md  track_profile.txt  track_sections.txt
reference/: README.md  race01.initial.sol  race01.jaffar  race01.manual.jaffar  race01.manual.sol
source/: engine.hpp  input.hpp  meson.build  player.cpp  track_data.hpp
tools/: difftest.py  engine.py  extract_track.py  extract_track_layout.py  extract_track_rom.py  gen_alts.py  gen_sections_header.py  sim.py  sim_arc.py  stream_check.py  stream_probe.py  test_serialize.cpp  validate.py
